# API-App

./: README.md
spotify-telegram-bot/: .env.example  Dockerfile  README.md  install.sh  pyproject.toml  requirements.txt
spotify-telegram-bot/src/: bot.py  config.py
spotify-telegram-bot/src/handlers/: preview.py  search.py  share.py
spotify-telegram-bot/src/models/: spotify.py
spotify-telegram-bot/src/services/: spotify_client.py  telegram_client.py
spotify-telegram-bot/src/utils/: helpers.py
spotify-telegram-bot/tests/: test_search.py  test_spotify_client.py
